@@ -15,6 +15,7 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+server/server.c: Fix possible buffer overflows.
 common/map.c: Fix possible buffer overflows; Reduce memory used by
    load_map_header().
 common/readable: Improve performance by minimizing string copies.
